scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  overflow-x: hidden;
-  overflow-y: hidden; }
+  overflow-x: hidden; }
 
 body {
   background-image: url("../img/bg.jpg");
