--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -50,7 +50,6 @@ html{
     box-sizing: border-box;
     font-size: 62.5%;
     overflow-x: hidden;
-    overflow-y: hidden;
 }
 
 body{
